--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,152 +1,152 @@
 /* Site wide*/
 body {
-    font-family: 'Fira Sans', sans-serif; 
+  font-family: "Fira Sans", sans-serif;
 }
 
 h2 {
-    font-family: 'Fredericka the Great', cursive;
-    margin-bottom: 3%;
+  font-family: "Fredericka the Great", cursive;
+  margin-bottom: 3%;
 }
 
-h3, h4, h5, h6 {
-    font-family: 'Dosis', sans-serif;
-    
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Dosis", sans-serif;
 }
 
-.light-section{
-    color: #2b2b28;
-    background-color: #f1d6ab;
+.light-section {
+  color: #2b2b28;
+  background-color: #f1d6ab;
 }
-.dark-section{
-    color: #f8f8f8;
-    background-color: #2b2b28;
+.dark-section {
+  color: #f8f8f8;
+  background-color: #2b2b28;
 }
 /* Nav Bar*/
 
 .custom-nav {
-    background-color: #2b2b28;
+  background-color: #2b2b28;
 }
-
-
 
 /* Banner */
 .banner-row {
-    background-image: url("/assets/img/banner.png");
-    background-position: center;
+  background-image: url("/assets/img/banner.png");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  
-
-  
-   
 }
-.heading-col{
-    
-    margin: 30% 10% 10%;
+.heading-col {
+  margin: 30% 10% 10%;
 }
-.banner-heading{
-    font-family: 'Fredericka the Great', cursive;
-    font-size: 5rem;
-    color: #f8f8f8;
-    
-
+.banner-heading {
+  font-family: "Fredericka the Great", cursive;
+  font-size: 5rem;
+  color: #f8f8f8;
 }
 .container-fluid {
-    margin:0;
-    padding:0;
+  margin: 0;
+  padding: 0;
 }
 
-.banner-img{
-    max-width: 100%;
+.banner-img {
+  max-width: 100%;
 }
 
 /*My Work Section*/
 .work-heading {
-    margin-bottom: 5%;
-    font-size: 3rem;
+  margin-bottom: 5%;
+  margin-right: 15%;
+  font-size: 3rem;
+  text-align: right;
 }
 .work-section {
-    padding: 5% 10%;
+  padding: 5% 10%;
 }
 .large-row {
-    width: 100%;
+  width: 100%;
 }
 /*About Me Section*/
 .about-heading {
- 
-    font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 .about-section {
-    padding: 5% 10%;
-    background-image: url(/assets/img/brush.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+  padding: 5% 10%;
+  background-image: url(/assets/img/brush.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.my-photo{
-    border-radius: 100%;
-    width: 300px;
-    margin: auto;
-    padding: 10%;
-    
-
+.my-photo {
+  border-radius: 100%;
+  width: 300px;
+  margin: auto;
+  padding: 10%;
 }
 .photo-col {
-    text-align: center;
+  text-align: center;
 }
 
 .about-col {
-    margin: 15% 0 0;
+  margin: 15% 0 0;
 }
 
 .cta {
-    margin: 10% 0;
+  margin: 10% 0;
 }
 
 /* Contact Section*/
 
 .contact-heading {
-    margin:  0 0 5%;
-    font-size: 3rem;
+  margin: 0 15% 5% 0;
+  font-size: 3rem;
+  text-align: right;
 }
 .contact-section {
-    padding: 5% 10%;
+  padding: 5% 10%;
 }
 .textarea {
-    width:100%;
+  width: 100%;
 }
 .submit-form {
-    margin: 5% auto;
+  margin: 5% auto;
 }
 
 .form-control {
-    margin-bottom: 5%;
+  margin-bottom: 5%;
 }
 label {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 /*Footer Section*/
 
 .footer-section {
-    text-align: center;
-    padding: 5%;
+  text-align: center;
+  padding: 5%;
 }
 .fa-foot {
-    padding: 15px;
+  padding: 15px;
 }
-@media (max-width:766px) {
-    h2 {
-        text-align: center;
-    }
-    .heading-col{
-        text-align: center;
-    }
-
-}
-@media (max-width:766px){
-    .about-col{
-        text-align: center;
-        margin: 0%;
-    }
+@media (max-width: 766px) {
+  h2 {
+    text-align: center;
+  }
+  .heading-col {
+    text-align: center;
+  }
+  .work-heading {
+      text-align: center;
+      margin: 5% 0 10%;
+  }
+  .about-heading {
+      margin: 5% 0 0;
+  }
+  .about-col {
+    text-align: center;
+    margin: 0%;
+  }
+  .contact-heading {
+      text-align: center;
+      margin: 5% 0;
+  }
 }
