--- a/assets/css/writing.css
+++ b/assets/css/writing.css
@@ -56,12 +56,12 @@ h4 {
 
 .gif {
   max-width: 100%;
-  margin: 5% 10%;
+ 
   text-align: center;
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   margin: 5% auto;
 }
 
