--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ h6 {
 
 /* Banner */
 .banner-row {
-  background-image: url("/assets/img/banner.jpeg");
+  background-image: url("/assets/img/banner.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -69,7 +69,7 @@ h6 {
 
 .about-section {
   padding: 5% 10%;
-  background-image: url(/assets/img/brush.jpeg);
+  background-image: url(/assets/img/brush.webp);
   background-size: cover;
   background-repeat: no-repeat;
 }
