--- a/assets/css/writing.css
+++ b/assets/css/writing.css
@@ -3,7 +3,7 @@ body {
   background-color: #f8f8f8;
   color: #2b2b28;
   margin: 0px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Fira Sans", sans-serif;
 }
 section {
   width: 75%;
