--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,11 +7,13 @@ h1 {
   font-family: "Fredericka the Great", cursive;
 }
 
-h2, h3, h4, h5, h6 {
+ h3, h4, h5, h6 {
   font-family: 'Dosis', sans-serif;
+  font-weight: 300;
 }
 h2 {
-  font-size: 4rem;
+  font-size: 3.5rem;
+  font-family: "Yeseva One", cursive;
 }
 .light-section {
   color: #2b2b28;
@@ -42,7 +44,7 @@ h2 {
    color: #f8f8f8;
 }
 .banner-heading {
-  font-size: 5.5rem;
+  font-size: 6rem;
 }
 .banner-subheading {
  font-size: 1.2rem;
