--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,14 +90,11 @@ h2 {
 }
 
 .about-col {
-  margin: 15% 0 0;
+  margin-top: 15%;
   font-size: 1rem;
   line-height: 1.5;
 }
 
-.cta {
-  margin: 10% 0;
-}
 
 /* Contact Section*/
 
@@ -107,7 +104,7 @@ label {
 }
 
 .contact-heading {
-  margin: 0 0 5% 0;
+  margin-bottom: 5% 0;
   color: #e3b04b;
 }
 
@@ -145,6 +142,69 @@ label {
   margin: 5% 20% 5% 5%;
 }
 
+/* MDI*/
+.mdi::before {
+  font-size: 24px;
+  line-height: 14px;
+}
+.btn .mdi::before {
+  position: relative;
+  top: 4px;
+}
+.btn-xs .mdi::before {
+  font-size: 18px;
+  top: 3px;
+}
+.btn-sm .mdi::before {
+  font-size: 18px;
+  top: 3px;
+}
+.dropdown-menu .mdi {
+  width: 18px;
+}
+.dropdown-menu .mdi::before {
+  position: relative;
+  top: 4px;
+  left: -8px;
+}
+.nav .mdi::before {
+  position: relative;
+  top: 4px;
+}
+.navbar .navbar-toggle .mdi::before {
+  position: relative;
+  top: 4px;
+  color: #FFF;
+}
+.breadcrumb .mdi::before {
+  position: relative;
+  top: 4px;
+}
+.breadcrumb a:hover {
+  text-decoration: none;
+}
+.breadcrumb a:hover span {
+  text-decoration: underline;
+}
+.alert .mdi::before {
+  position: relative;
+  top: 4px;
+  margin-right: 2px;
+}
+.input-group-addon .mdi::before {
+  position: relative;
+  top: 3px;
+}
+.navbar-brand .mdi::before {
+  position: relative;
+  top: 2px;
+  margin-right: 2px;
+}
+.list-group-item .mdi::before {
+  position: relative;
+  top: 3px;
+  left: -3px
+}
 /*Responsive features*/
 
 @media (max-width: 766px) {
@@ -164,3 +224,5 @@ label {
     margin: 0% 15%;
   }
 }
+
+
