--- a/assets/css/writing.css
+++ b/assets/css/writing.css
@@ -6,11 +6,11 @@ body {
   font-family: "Fira Sans", sans-serif;
 }
 .title {
-  width:75%;
+ 
   margin: 5% auto;
 }
 section {
-  width: 75%;
+  width: 50%;
   margin: auto;
 }
 section a {
@@ -80,4 +80,9 @@ img {
 
 .alert {
   margin: 5% 0;
+}
+@media (max-width:766px){
+  section {
+    width: 70%;
+  }
 }
