--- a/assets/css/writing.css
+++ b/assets/css/writing.css
@@ -5,9 +5,7 @@ body {
   margin: 0px;
   font-family: "Fira Sans", sans-serif;
 }
-.title {
-  margin: 5% auto;
-}
+
 section {
   width: 50%;
   margin: auto;
@@ -35,7 +33,8 @@ h6 {
 h1 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 5% 0;
+  margin: 100px 0 5%;
+
 }
 
 h2 {
